--- a/app/styles/ui/dialogs/_conflicts.scss
+++ b/app/styles/ui/dialogs/_conflicts.scss
@@ -1,6 +1,7 @@
 @import '../../mixins';
 
-dialog#conflicts-dialog {
+dialog#conflicts-dialog,
+dialog#copilot-conflicts-dialog {
   width: 500px;
 
   .summary {
